--- a/pages/home/Home.module.css
+++ b/pages/home/Home.module.css
@@ -1,3 +1,13 @@
+.note_app_container {
+    display: flex;
+}
+
+.overflow_hidden {
+    max-height: 100vh;
+    overflow: hidden !important;
+    overflow-y: hidden !important;
+}
+
 .note_app {
   background-color: black;
   color: antiquewhite;
@@ -5,6 +15,7 @@
   min-height: 100vh;
   padding: 0;
   margin: 0;
+  min-width: 95%;
 }
 
 .note_title {
@@ -47,7 +58,7 @@
 
 .notes_container {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
   padding: 10px;
   gap: 8px;
 }
@@ -78,10 +89,10 @@
 }
 
 .note_card_markdown {
-  font-size: 0.9rem;
+  font-size: 0.8rem;
   margin-top: 10px;
   overflow: hidden;
-  width: 200px;
+  width: 150px;
   /* white-space: nowrap; */
   max-height: 100px;
   /* line-height: 2.5rem; */
@@ -100,10 +111,15 @@
   position: absolute;
   place-items: center;
   border: none;
-  bottom: 20px;
-  right: 35px;
+  bottom: 1rem;
+  right: 1.1rem;
 }
 
 .add_btn:hover {
     filter: blur(1px);
+}
+
+.add_btn:active{
+    border: none;
+    outline: none;
 }
