--- a/pages/home/Home.module.css
+++ b/pages/home/Home.module.css
@@ -1,5 +1,6 @@
 .note_app_container {
     display: flex;
+    position: relative;
 }
 
 .overflow_hidden {
@@ -108,7 +109,7 @@
   padding: 8px 17px;
   font-size: 2rem;
   display: grid;
-  position: absolute;
+  position: fixed;
   place-items: center;
   border: none;
   bottom: 1rem;
@@ -123,3 +124,5 @@
     border: none;
     outline: none;
 }
+
+
