--- a/pages/newNote/NewNote.module.css
+++ b/pages/newNote/NewNote.module.css
@@ -71,6 +71,18 @@
   animation-fill-mode: forwards;
 }
 
+.opened_menu ul li {
+  padding: 5px 7px;
+  border-radius: 5px;
+  transition: all .2s ease-in-out;
+}
+
+.opened_menu ul li:hover {
+  background-color: bisque;
+  color: black;
+  cursor: pointer;
+}
+
 @keyframes open_menu {
   0% {
     left: 100%;
