--- a/pages/home/Home.module.css
+++ b/pages/home/Home.module.css
@@ -116,6 +116,7 @@
   border: none;
   bottom: 1rem;
   right: 1.1rem;
+  cursor: pointer;
 }
 
 .add_btn:hover {
@@ -152,7 +153,6 @@
   top: 0.7rem;
 }
 
-
 .menu ul {
   list-style-type: none;
   display: flex-column;
@@ -169,4 +169,90 @@
 .opened_menu ul {
   list-style-type: none;
   display: flex-column;
+}
+
+.opened_menu ul li {
+  padding: 5px 7px;
+  border-radius: 5px;
+  transition: all 0.2s ease-in-out;
+}
+
+.opened_menu ul li:hover {
+  background-color: bisque;
+  color: black;
+  cursor: pointer;
+}
+
+.delete_btn {
+  background-color: rgb(145, 6, 6);
+  border-radius: 50%;
+  padding: 8px 10px;
+  font-size: 2rem;
+  display: grid;
+  position: fixed;
+  place-items: center;
+  border: none;
+  bottom: 1rem;
+  right: 1.1rem;
+  cursor: pointer;
+}
+
+.favorite_btn {
+  background-color: rgb(14, 70, 3);
+  border-radius: 50%;
+  padding: 8px 10px;
+  font-size: 2rem;
+  display: grid;
+  position: fixed;
+  place-items: center;
+  border: none;
+  cursor: pointer;
+
+  bottom: 1rem;
+  right: 1.1rem;
+}
+
+.delete_btn:hover {
+  filter: blur(1px);
+}
+
+.delete_btn:active {
+  border: none;
+  outline: none;
+}
+
+.note_card_container {
+  position: relative;
+}
+
+.check_box {
+  width: 20px;
+  height: 20px;
+  border: 1px solid white;
+  border-radius: 5px;
+  background-color: transparent;
+  position: absolute;
+  right: -15px;
+  top: -15px;
+}
+
+.checked_check_box {
+  width: 20px;
+  height: 20px;
+  border: 1px solid white;
+  border-radius: 5px;
+  position: absolute;
+  right: -15px;
+  top: -15px;
+  background-color: rgb(17, 16, 16);
+}
+
+.checked_check_box::before {
+  content: "✓";
+  color: white;
+  font-size: 1.6rem;
+  font-weight: 700;
+  position: absolute;
+  top: -15px;
+  right: -4px;
 }
