--- a/styles/global.scss
+++ b/styles/global.scss
@@ -3,6 +3,9 @@ body {
   padding: 0;
   margin: 0;
   overflow-x: hidden;
+  overflow-y: hidden;
+  max-height: 100vh;
+  position: relative;
 }
 
 a {
