--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,3 +1,4 @@
+
 html,
 body {
   padding: 0;
@@ -26,6 +27,7 @@ a {
 .border {
   border: 1px solid black;
 }
+
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,700");
 
 $borderRadius: 1px;
@@ -60,6 +62,9 @@ $yellow: #ed6a5e;
   transition: $transition;
 }
 
+@import "./input.scss";
+@import "./form.scss";
+
 html,
 body,
 .container,
@@ -87,143 +92,6 @@ body {
   background-image: url("https://picsum.photos/id/20/1366/768");
   background-repeat: no-repeat;
   background-size: cover;
-}
-
-.form-block-wrapper {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  height: 100%;
-  @include transition(all 0.85s ease-in-out);
-  &--is-login {
-    opacity: 0.92;
-    background-color: $background2;
-  }
-  &--is-signup {
-    opacity: 0.94;
-    background-color: $background1;
-  }
-}
-
-.form-block {
-  position: relative;
-  margin: 100px auto 0;
-  max-width: 320px;
-  padding: 25px;
-  background: rgba(255, 255, 255, 0.13);
-  border-radius: 2 * $borderRadius;
-  color: #fff;
-  @include box-shadow(0px 0px 16px 9px rgba(0, 0, 0, 0.07));
-}
-
-.form-block__header {
-  margin-bottom: 20px;
-  h1 {
-    font-size: 30px;
-    margin: 0 0 20px;
-  }
-}
-
-.form-block__toggle-block {
-  position: relative;
-  span {
-    font-size: 13px;
-    font-weight: 300;
-    color: rgba(255, 255, 255, 0.65);
-  }
-}
-
-.form-block__input-wrapper {
-  height: 2.5 * $inputHeight;
-  position: relative;
-  margin-bottom: 2px;
-  @include transition(all 0.25s $transitionEasing 0.1s);
-  .form-block--is-signup & {
-    height: 3.5 * $inputHeight;
-    @include transition(all 0.5s $transitionEasing 0.05s);
-  }
-}
-
-.form-group {
-  &--signup {
-    position: absolute;
-    top: 0;
-    left: $offset;
-    width: 100%;
-  }
-}
-
-.form-group__input {
-  display: block;
-  font-size: 15px;
-  color: #fff;
-  width: 100%;
-  box-sizing: border-box;
-  font-size: 16px;
-  padding: 14px 10px;
-  margin-bottom: 15px;
-  background: rgba(255, 255, 255, 0.25);
-  border: 1px solid rgba(255, 255, 255, 0.1);
-  border-radius: $borderRadius;
-  &:focus {
-    outline: none;
-    border: 1px solid #fff;
-    background: transparent;
-  }
-  .form-block--is-signup & {
-    transform: translateX(-$offset);
-  }
-  .form-group--login & {
-    opacity: 1;
-    .form-block--is-signup & {
-      opacity: 0;
-    }
-  }
-  .form-group--signup & {
-    opacity: 0;
-    .form-block--is-signup & {
-      opacity: 1;
-    }
-  }
-}
-
-.form-group__errors {
-  display: block;
-  width: 100%;
-  box-sizing: border-box;
-  .form-block--is-signup & {
-    transform: translateX(-$offset);
-  }
-  .form-group--login & {
-    opacity: 1;
-    .form-block--is-signup & {
-      opacity: 0;
-    }
-  }
-  .form-group--signup & {
-    opacity: 0;
-    .form-block--is-signup & {
-      opacity: 1;
-    }
-  }
-}
-
-@for $i from 1 through 4 {
-  .form-group__input:nth-of-type(#{$i}) {
-    @include transition(
-      transform 0.35s $transitionEasing $i * 0.085s,
-      opacity 0.3s ease-in-out 0.2s,
-      background 0.15s ease-in-out,
-      border 0.3s ease-in-out
-    );
-  }
-  .form-group__errors:nth-child(#{$i}) {
-    @include transition(
-      transform 0.35s $transitionEasing $i * 0.085s,
-      opacity 0.3s ease-in-out 0.2s
-    );
-  }
 }
 
 .button {
@@ -259,248 +127,3 @@ body {
   width: 100%;
 }
 
-input[type="checkbox"] {
-  display: none;
-  + label {
-    &:before {
-      content: "";
-      display: block;
-      position: absolute;
-      top: 10px;
-      right: 0;
-      width: 43px;
-      height: 8px;
-      background: rgba(255, 255, 255, 0.4);
-      cursor: pointer;
-      @include border-radius(50px);
-    }
-    &:after {
-      content: "";
-      display: block;
-      position: absolute;
-      top: 1px;
-      right: 18px;
-      width: 25px;
-      height: 25px;
-      background: $yellow;
-      cursor: pointer;
-      @include border-radius(50%);
-      @include box-shadow(1px 1px 0px 0px rgba(0, 0, 0, 0.15));
-      @include transition(all 0.3s ease-in-out);
-    }
-  }
-  &:checked + label:after {
-    right: 0;
-  }
-}
-
-::-webkit-input-placeholder {
-  /* Chrome/Opera/Safari */
-  font-weight: 300;
-  color: rgba(255, 2505, 255, 0.5);
-}
-::-moz-placeholder {
-  /* Firefox 19+ */
-  font-weight: 300;
-  color: rgba(255, 255, 255, 0.5);
-}
-:-ms-input-placeholder {
-  /* IE 10+ */
-  font-weight: 300;
-  color: rgba(255, 255, 255, 0.5);
-}
-:-moz-placeholder {
-  /* Firefox 18- */
-  font-weight: 300;
-  color: rgba(255, 255, 255, 0.5);
-}
-
-.tooltip {
-  padding: 7px;
-  @include border-radius(1px);
-  background: rgba(0, 0, 0, 0.5);
-  color: #fff;
-  font-size: 12px;
-  position: absolute;
-  top: -10px;
-  right: 0;
-}
-
-.editor {
-  max-height: 80%;
-  line-height: 10px;
-  background-color: black;
-  padding: 5px;
-  margin: 10px;
-  margin: 10px auto;
-  border: none !important;
-  outline: none !important;
-  caret-color: orange;
-}
-
-@media only screen and (min-width: 430px) {
-  .menubar {
-    position: relative;
-    top: 51px;
-  }
-  .editor {
-    margin-top: 52px;
-  }
-}
-
-.menubar {
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  max-height: 50px;
-  gap: 5px;
-  background-color: rgb(48, 48, 48);
-  padding: 0 10px;
-  position: fixed;
-  bottom: var(--keyboardup);
-  left: 0;
-  right: 0;
-  z-index: 1000;
-  button {
-    padding: 10px;
-    cursor: pointer;
-    border-radius: 10px;
-    background-color: rgb(48, 48, 48);
-    outline: none;
-    border: none;
-    max-height: 40px;
-    display: grid;
-    place-items: center;
-    &:hover{
-      background-color: #707070;
-    }
-  }
-}
-
-.colorInput {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  width: 40px;
-  height: 42px;
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-}
-.colorInput::-webkit-color-swatch {
-  border-radius: 10px;
-  border: none;
-}
-.colorInput::-moz-color-swatch {
-  border-radius: 10px;
-  border: none;
-}
-
-.ProseMirror {
-  > * + * {
-    margin-top: 0.75em;
-  }
-
-  ul,
-  ol {
-    padding: 0 1rem;
-  }
-
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    line-height: 1.1;
-  }
-
-  code {
-    background-color: rgba(#616161, 0.1);
-    color: #616161;
-  }
-
-  pre {
-    background: #0d0d0d;
-    color: #fff;
-    font-family: "JetBrainsMono", monospace;
-    padding: 0.75rem 1rem;
-    border-radius: 0.5rem;
-
-    code {
-      color: inherit;
-      padding: 0;
-      background: none;
-      font-size: 0.8rem;
-    }
-  }
-
-  img {
-    max-width: 100%;
-    height: auto;
-  }
-
-  blockquote {
-    padding-left: 1rem;
-    border-left: 2px solid rgba(#0d0d0d, 0.1);
-  }
-
-  hr {
-    border: none;
-    border-top: 2px solid rgba(#0d0d0d, 0.1);
-    margin: 2rem 0;
-  }
-}
-
-.bubble-menu {
-  display: flex;
-  background-color: #0d0d0d;
-  padding: 0.2rem;
-  border-radius: 0.5rem;
-
-  button {
-    border: none;
-    background: none;
-    color: #fff;
-    font-size: 0.85rem;
-    font-weight: 500;
-    padding: 0 0.2rem;
-    opacity: 0.6;
-
-    &:hover,
-    &.is-active {
-      opacity: 1;
-    }
-  }
-}
-
-.floating-menu {
-  display: flex;
-  background-color: #0d0d0d10;
-  padding: 0.2rem;
-  border-radius: 0.5rem;
-
-  button {
-    border: none;
-    background: none;
-    font-size: 0.85rem;
-    font-weight: 500;
-    padding: 0 0.2rem;
-    opacity: 0.6;
-
-    &:hover,
-    &.is-active {
-      opacity: 1;
-    }
-  }
-}
-
-.my-custom-class {
-  list-style-type: inherit;
-  li {
-    color: blue;
-    p {
-      color: white;
-    }
-  }
-}
