--- a/modals/Modals.module.css
+++ b/modals/Modals.module.css
@@ -26,6 +26,8 @@
   flex-direction: column;
   gap: 25px;
   color: white;
+  width: 100%;
+  margin: 20px 10px;
 }
 
 .confirm_modal_container {
@@ -101,3 +103,5 @@
     rgba(255, 255, 255, 0.30) 0px -12px 20px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
     rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
+
+
