--- a/styles/global.scss
+++ b/styles/global.scss
@@ -64,6 +64,8 @@ $yellow: #ed6a5e;
 
 @import "./input.scss";
 @import "./form.scss";
+@import "./editor.scss";
+@import "./modal.scss";
 
 html,
 body,
